@@ -41,10 +41,10 @@ return;
         <#if handleResult>def call_service_result = </#if>ec.service.<#if .node.@async?has_content && .node.@async != "false">async()<#else/>sync()</#if>.name("${.node.@name}")<#if .node["@async"]?if_exists == "persist">.persist(true)</#if><#if .node["@multi"]?if_exists == "true">.multi(true)</#if><#if .node["@multi"]?if_exists == "parameter">.multi(ec.web?.requestParameters?._isMulti == "true")</#if>
             <#if .node["@in-map"]?if_exists == "true">.parameters(context)<#elseif .node["@in-map"]?has_content && .node["@in-map"] != "false">.parameters(${.node["@in-map"]})</#if><#list .node["field-map"] as fieldMap>.parameter("${fieldMap["@field-name"]}",<#if fieldMap["@from"]?has_content>${fieldMap["@from"]}<#elseif fieldMap["@value"]?has_content>"""${fieldMap["@value"]}"""<#else>${fieldMap["@field-name"]}</#if>)</#list>.call()
         <#if handleResult>
-        if (context.${.node["@out-map"]} != null) {
-            if (call_service_result) context.${.node["@out-map"]}.putAll(call_service_result)
+        if (${.node["@out-map"]} != null) {
+            if (call_service_result) ${.node["@out-map"]}.putAll(call_service_result)
         } else {
-            context.${.node["@out-map"]} = call_service_result
+            ${.node["@out-map"]} = call_service_result
         }
         </#if>
         <#if (.node["@web-send-json-response"]?if_exists == "true")>
